--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Extremes"
 uuid = "fe3fe864-1b39-11e9-20b8-1f96fa57382d"
 authors = ["Jonathan Jalbert <jonathan.jalbert@polymtl.ca>"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -11,3 +11,10 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+
+[compat]
+DataFrames = "0.17.1"
+Distributions = "0.17.0"
+Ipopt = "0.5.4"
+JuMP = "0.19.2"
+SpecialFunctions = "0.8.0"
