--- a/Project.toml
+++ b/Project.toml
@@ -14,8 +14,8 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 DataFrames = "0.17, 0.18, 0.19"
-Distributions = "0.17, 0.18, 0.19, 0.20, 0.21"
+Distributions = "0.18, 0.19, 0.20, 0.21"
 Ipopt = "0.5, 0.6"
 JuMP = "0.19, 0.20"
 SpecialFunctions = "0.8"
-julia = "1.2"
+julia = "1"
