--- a/Project.toml
+++ b/Project.toml
@@ -13,9 +13,9 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
-DataFrames = ">= 0.17"
-Distributions = ">= 0.18"
-Ipopt = ">= 0.5"
-JuMP = ">= 0.19"
-SpecialFunctions = ">= 0.8"
+DataFrames = "0.17, 0.18, 0.19, 0.20"
+Distributions = "0.18, 0.19, 0.20, 0.21, 0.22"
+Ipopt = "0.5, 0.6"
+JuMP = "0.19, 0.20"
+SpecialFunctions = "0.8, 0.9"
 julia = "1"
