--- a/Project.toml
+++ b/Project.toml
@@ -7,14 +7,13 @@ version = "0.1.2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLSolversBase = "d41bc354-129a-5804-8e4c-c37616107c6c"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
-SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 DataFrames = "0.19, 0.20"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22"
-SpecialFunctions = "0.8, 0.9"
+NLSolversBase = "7.6"
+Optim = "0.20"
 julia = "1"
