--- a/Project.toml
+++ b/Project.toml
@@ -10,10 +10,12 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLSolversBase = "d41bc354-129a-5804-8e4c-c37616107c6c"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 DataFrames = "0.19, 0.20"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22"
 NLSolversBase = "7.6"
 Optim = "0.20"
+SpecialFunctions = "0.9, 0.10"
 julia = "1"
