--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Jonathan Jalbert <jonathan.jalbert@polymtl.ca>"]
 version = "0.1.2"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
