--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 CSV = "0.6"
 DataFrames = "0.19, 0.20, 0.21"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23"
+Gadfly = "1"
 NLSolversBase = "7.6"
 Optim = "0.20, 0.21"
 SpecialFunctions = "0.9, 0.10"
