--- a/Project.toml
+++ b/Project.toml
@@ -24,8 +24,11 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 CSV = "0.6, 0.7"
 DataFrames = "0.19, 0.20, 0.21"
 Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23"
+ForwardDiff = "0.10"
 Gadfly = "1"
-NLSolversBase = "7.6"
+Mamba = "0.12"
+NLSolversBase = "7"
 Optim = "0.20, 0.21, 0.22"
+ProgressMeter = "1"
 SpecialFunctions = "0.9, 0.10"
 julia = "1"
