--- a/Project.toml
+++ b/Project.toml
@@ -21,14 +21,13 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-CSV = "0.6, 0.7"
-DataFrames = "0.19, 0.20, 0.21"
-Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23"
-ForwardDiff = "0.10"
-Gadfly = "1"
-Mamba = "0.12"
+CSV = ">= 0.9"
+DataFrames = ">= 1.2"
+Distributions = ">= 0.23"
+ForwardDiff = ">= 0.10"
+Gadfly = ">= 1.3"
+Mamba = ">= 0.12"
 NLSolversBase = "7"
-Optim = "0.20, 0.21, 0.22, 1.0, 1.1, 1.2"
-ProgressMeter = "1"
-SpecialFunctions = "0.9, 0.10"
+Optim = ">= 1.4"
+ProgressMeter = ">= 1"
 julia = "1"
