--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Extremes"
 uuid = "fe3fe864-1b39-11e9-20b8-1f96fa57382d"
 authors = ["Jonathan Jalbert <jonathan.jalbert@polymtl.ca>"]
-version = "0.2.1"
+version = "0.2.2"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -12,7 +12,6 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Mamba = "5424a776-8be3-5c5b-a13f-3551f69ba0e6"
-NLSolversBase = "d41bc354-129a-5804-8e4c-c37616107c6c"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -21,13 +20,13 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-CSV = ">= 0.9"
-DataFrames = ">= 1.2"
-Distributions = ">= 0.23"
+CSV = ">= 0.6"
+DataFrames = ">= 0.19"
+Distributions = ">= 0.18"
 ForwardDiff = ">= 0.10"
-Gadfly = ">= 1.3"
+Gadfly = ">= 1"
 Mamba = ">= 0.12"
-NLSolversBase = "7"
-Optim = ">= 1.4"
+Optim = ">= 0.20"
 ProgressMeter = ">= 1"
+SpecialFunctions = ">= 0.9"
 julia = "1"
