--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -8,9 +8,9 @@ Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 
 [compat]
-Cairo = ">= 1"
-DataFrames = ">= 0.19"
-Distributions = ">= 0.18"
-Documenter = ">= 0.20"
-Fontconfig = ">= 0.4"
+Cairo = "^1"
+DataFrames = "^1"
+Distributions = "^0"
+Documenter = "^0"
+Fontconfig = "^0"
 Gadfly = ">= 1"
