--- a/Project.toml
+++ b/Project.toml
@@ -20,13 +20,13 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-CSV = "^0.9"
+CSV = "<1"
 DataFrames = "^1"
-Distributions = "^0.18"
-ForwardDiff = "^0.10"
+Distributions = "<1"
+ForwardDiff = "<1"
 Gadfly = "^1"
-Mamba = "^0.12"
+Mamba = "<1"
 Optim = "^1"
 ProgressMeter = "^1"
-SpecialFunctions = "^0.10"
+SpecialFunctions = "<1"
 julia = "1"
