--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -10,7 +10,7 @@ Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 [compat]
 Cairo = "^1"
 DataFrames = "^1"
-Distributions = "^0.18"
-Documenter = "^0.1"
-Fontconfig = "^0.4"
-Gadfly = ">= 1"
+Distributions = "<1>"
+Documenter = "<1"
+Fontconfig = "<1"
+Gadfly = "^1"
