--- a/Project.toml
+++ b/Project.toml
@@ -25,8 +25,8 @@ DataFrames = "^1"
 Distributions = "^0"
 ForwardDiff = "^0"
 Gadfly = "^1"
-Mamba = "^0"
+Mamba = "0.12.0 - 0.12.5"
 Optim = "^1"
 ProgressMeter = "^1"
-SpecialFunctions = "^2"
+SpecialFunctions = "0.7.0 - 2.1.4"
 julia = "1"
