--- a/Project.toml
+++ b/Project.toml
@@ -20,10 +20,10 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-CSV = "^0"
+CSV = "0.10"
 DataFrames = "^1"
-Distributions = "^0"
-ForwardDiff = "^0"
+Distributions = "0.16.0 - 0.25.55"
+ForwardDiff = "0.10"
 Gadfly = "^1"
 Mamba = "0.12.0 - 0.12.5"
 Optim = "^1"
