--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 [compat]
 CSV = "0.10"
 DataFrames = "^1"
-Distributions = "0.16.0 - 0.25.55"
+Distributions = "0.16.0 - 0.25.55, 0.25"
 ForwardDiff = "0.10"
 Gadfly = "^1"
 Mamba = "0.12.0 - 0.12.5"
