--- a/Project.toml
+++ b/Project.toml
@@ -28,5 +28,5 @@ Gadfly = "^1"
 Mamba = "0.12.0 - 0.12.5"
 Optim = "^1"
 ProgressMeter = "^1"
-SpecialFunctions = "0.8 - 0.10"
+SpecialFunctions = "0.8 - 0.10, 2"
 julia = "1"
