--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Extremes"
 uuid = "fe3fe864-1b39-11e9-20b8-1f96fa57382d"
 authors = ["Jonathan Jalbert <jonathan.jalbert@polymtl.ca>"]
-version = "0.2.3"
+version = "0.3.0"
 
 [deps]
 AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
@@ -18,3 +18,15 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+AdvancedHMC = "0.3"
+CSV = "0.10"
+DataFrames = "^1"
+Distributions = "0.16.0 - 0.25.55, 0.25"
+ForwardDiff = "0.10"
+Gadfly = "^1"
+MCMCChains = "^5"
+Optim = "^1"
+SpecialFunctions = "^2"
+julia = "1"
