Restrain version of MambaLite to 0.1.1 and newer

--- a/Project.toml
+++ b/Project.toml
@@ -25,8 +25,8 @@ DataFrames = "^1"
 Distributions = "^0"
 ForwardDiff = "^0"
 Gadfly = "^1"
-MambaLite = "^0.1"
+MambaLite = "^0.1.1"
 Optim = "^1"
 ProgressMeter = "^1"
-SpecialFunctions = "0.8 - 0.10, 2"
+SpecialFunctions = "0.8 - 2"
 julia = "1"
