Add upper bound to ForwardDiff and Distributions dependencies

--- a/Project.toml
+++ b/Project.toml
@@ -22,8 +22,8 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 [compat]
 CSV = "^0.10"
 DataFrames = "^1"
-Distributions = "^0"
-ForwardDiff = "^0"
+Distributions = "0.23 - 0.25"
+ForwardDiff = "^0.10"
 Gadfly = "^1"
 MambaLite = "^0.1.1"
 Optim = "^1"
