--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -6,6 +6,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 
 [compat]
 Cairo = "^1"
@@ -14,3 +15,4 @@ Distributions = "^0"
 Documenter = "^0"
 Fontconfig = "^0"
 Gadfly = "^1"
+Optim = "^1"
