--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Extremes"
 uuid = "fe3fe864-1b39-11e9-20b8-1f96fa57382d"
 authors = ["Jonathan Jalbert <jonathan.jalbert@polymtl.ca>"]
-version = "1.0.1"
+version = "1.0.3"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -28,6 +28,7 @@ ForwardDiff = "^0.10"
 Gadfly = "^1"
 MambaLite = "^0.1"
 Optim = "^1"
+PDMats = "^0.11"
 ProgressMeter = "^1"
 SpecialFunctions = "0.8 - 0.10, 2"
 julia = "1"
